building router: - return objects after the processing is done
fixed some logic issues in endpoint adapter

coming soon:
- build reactive streams around the business logic functions